fixed spacing and styling for categories

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,9 +117,10 @@ main.root {
     width: 100%;
     height: 100%;
     margin-right: 20px;
+    margin-left: 20px;
   
     display: grid;
-    grid-template: 15% auto / .6fr 3fr;
+    grid-template: 8% auto / .6fr 3fr;
   }
 
 .product-container header {
@@ -149,6 +150,7 @@ main.root {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-left;
+    padding-top: 0%
 
 }
 .product-container .products a {
@@ -172,6 +174,7 @@ main.root {
 
 // ---------- Product show page stylying --------
 .product-show-container {
+    margin: 2em;
     margin-top: 50px;
     display: grid;
     grid-template: 1fr / 1fr 1fr;
@@ -202,8 +205,7 @@ main.root {
 }
 
 // ---------- Merchant show page stylying --------
-.merchant-products-container {
-}
+
 .merchant-products-container .heading {
     grid-column: 2;
     grid-row: 1;
@@ -387,4 +389,8 @@ main.root {
 
 .form-page {
     margin: 3em
+}
+
+.category-container header {
+    margin-bottom: 85%
 }
